# lyapunov-nn-homogeneous

./: .gitignore  README.md  debug_grid.py  debug_grid.txt  debug_hd.txt  debug_homogeneous_dynamics.py  debug_losses.py  debug_losses.txt  debug_nn_models.py  debug_nn_models.txt  grid.py  main.py  pyproject.toml
models/: __init__.py  full_system_dynamics.py  homogeneous_dynamics.py  losses.py  nn_models.py  nn_models_cfg.py  w.py
runs/step2/: step2_V.pt
runs/step3/: W_model.pt
scripts/: plot_blend.py  plot_blend_rect.py  plot_vinf_full.py  train_vinf.py  train_w_near_zero.py
src/: surfplot.py
src/lyapnn/: cli.py
src/lyapnn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lyapnn/geometry/: __init__.py  r12.py
src/lyapnn/models/: __init__.py  homog_v.py
src/lyapnn/pipelines/: __init__.py  run.py  step2_plot.py  step4_blend_plot.py  step4_blend_rect_plot.py  workflow.py
src/lyapnn/systems/: __init__.py  duffing_friction.py
src/lyapnn/training/: derivatives.py  step2_train_vinf.py  step3_train_w_near_zero.py  vinf.py  w_local.py
src/lyapnn/viz/: __init__.py  blend.py  blend_rect.py  grid.py  heatmaps.py  legend.py  patches.py  report.py  surfaces.py  w_diagnostics.py
viz/: __init__.py  viz_cfg.py  viz_heatmap.py
