[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapnn"
version = "0.1.0"
description = "NN-based Lyapunov diagnostics (Efimov-style homogeneous V) for r=(1,2)."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch",
  "matplotlib",
]

[project.scripts]
lyapnn = "lyapnn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
